@@ -8,3 +8,4 @@
 CHANGELOG
 bzr-test.log
 ,,*
+testbzr.log
